--- a/k8s/was-deployment.yaml
+++ b/k8s/was-deployment.yaml
@@ -19,7 +19,8 @@ spec:
       containers:
       - name: petclinic
         # 업로드한 WAS 이미지 사용 
-        image: 639242342449.dkr.ecr.ap-northeast-2.amazonaws.com/petclinic-app:v10
+        image: 639242342449.dkr.ecr.ap-northeast-2.amazonaws.com/petclinic-app:v11
+        #image: 639242342449.dkr.ecr.ap-northeast-2.amazonaws.com/petclinic-app:was
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
